chore: fixed tablet bug on annual salary

--- a/client/src/components/SalaryComponent/styles.scss
+++ b/client/src/components/SalaryComponent/styles.scss
@@ -10,10 +10,14 @@
 
 .salary-body {
   td {
-    width: 201px;
+    width: 215px;
   }
 
   i {
     padding-left: 4px;
+
+    @include for-tablet {
+      display: none;
+    }
   }
 }
